--- a/about-us.html
+++ b/about-us.html
@@ -292,8 +292,7 @@
 		============================================= -->
 		<section class="page-title page-title-parallax parallax dark include-header" style="padding: 250px 0;">
 
-			<img src="./images/Lagny.webp" class="parallax-bg figure-img"
-				alt="A picture of Lagny-sur-Marne in France where TDR is headquartered.">
+			<img src="./images/Lagny.webp" class="parallax-bg figure-img" alt="A picture of Lagny-sur-Marne in France where TDR is headquartered">
 
 			<div class="container">
 				<div class="page-title-row">
@@ -307,8 +306,7 @@
 		</section><!-- .page-title end -->
 		<div class="container d-flex justify-content-center">
 			<figcaption class="figure-caption
-			text-lightSamaritan">A picture of Lagny-sur-Marne in France where TDR
-				is headquartered.
+			text-lightSamaritan">A picture of Lagny-sur-Marne in France where TDR is headquartered
 			</figcaption>
 		</div>
 		<!-- Content
@@ -325,30 +323,20 @@
 								<h4>Why choose <span>Us</span>.</h4>
 							</div>
 
-							At Trade Duty Refund, we pride ourselves on being the trusted partner for businesses navigating the
-							complexities of global commerce. Here's why our clients choose us:
+							At Trade Duty Refund, we pride ourselves on being the trusted partner for businesses navigating the complexities of global commerce. Here's why our clients choose us:
 							<ul>
 								<li>
-									<strong>Expertise in Duty-Free Returns</strong>: Our in-depth knowledge of customs regulations in the
-									EU, UK, and US
-									ensures seamless returns, saving businesses time and money.
+									<strong>Expertise in Duty-Free Returns</strong>: Our in-depth knowledge of customs regulations in the EU, UK, and US ensures seamless returns, saving businesses time and money.
 								</li>
 								<li>
-									<strong>Comprehensive Solutions</strong>: From managing export documentation to handling inbound and
-									outbound
-									clearances,
-									we offer end-to-end support tailored to your needs.
+									<strong>Comprehensive Solutions</strong>: From managing export documentation to handling inbound and outbound clearances, we offer end-to-end support tailored to your needs.
 								</li>
 								<li>
-									<strong>Global Reach, Local Expertise</strong>: Whether you’re a local business or a multinational
-									corporation, our
-									team
-									delivers reliable, personalized service that scales with your operations.
+									<strong>Global Reach, Local Expertise</strong>: Whether you’re a local business or a multinational corporation, our team delivers reliable, personalized service that scales with your operations.
 								</li>
 								<li>
-									<strong>Protecting Your Margins</strong>: By minimizing import duties on returned goods, we help
-									safeguard your
-									profitability, even in a challenging eCommerce landscape.
+									<strong>Protecting Your Margins</strong>:
+									By minimizing import duties on returned goods, we help safeguard your profitability, even in a challenging eCommerce landscape.
 								</li>
 							</ul>
 
@@ -360,14 +348,10 @@
 								<h4>Our <span>Mission</span>.</h4>
 							</div>
 							<p>
-								At Trade Duty Refund, our mission is to simplify global trade for businesses by removing barriers and
-								inefficiencies in duty management.
+								At Trade Duty Refund, our mission is to simplify global trade for businesses by removing barriers and inefficiencies in duty management.
 							</p>
 							<p>
-								We aim to empower businesses of all sizes to thrive in international markets by offering innovative,
-								compliant, and cost-effective solutions for duty-free returns. We are committed to building long-term
-								partnerships that add value to your operations, helping you stay competitive in an ever-evolving global
-								economy.
+								We aim to empower businesses of all sizes to thrive in international markets by offering innovative, compliant, and cost-effective solutions for duty-free returns. We are committed to building long-term partnerships that add value to your operations, helping you stay competitive in an ever-evolving global economy.
 							</p>
 						</div>
 
@@ -377,38 +361,28 @@
 								<h4>What we <span>Do</span>.</h4>
 							</div>
 
-							Trade Duty Refund specializes in simplifying the process of duty-free returns for businesses engaged in
-							international trade.
+							Trade Duty Refund specializes in simplifying the process of duty-free returns for businesses engaged in international trade.
 							<ul>
 								<li>
-									<strong>Seamless Duty-Free Returns</strong>: We handle all aspects of returning goods duty-free,
-									ensuring
-									compliance with
-									regulations in the EU, UK, and US.
+									<strong>Seamless Duty-Free Returns</strong>: We handle all aspects of returning goods duty-free, ensuring compliance with regulations in the EU, UK, and US.
 								</li>
 								<li>
-									<strong>Customs Brokerage Services</strong>: Acting as your trusted customs broker, we manage export
-									records,
-									documentation, and claims with customs authorities.
+									<strong>Customs Brokerage Services</strong>: Acting as your trusted customs broker, we manage export records, documentation, and claims with customs authorities.
 								</li>
 								<li>
-									<strong>Duty Recovery Expertise</strong>: From reclaiming duties on returned items to facilitating
-									duty
-									drawback processes,
-									we help businesses recover costs at every opportunity.
+									<strong>Duty Recovery Expertise</strong>: From reclaiming duties on returned items to facilitating duty drawback processes, we help businesses recover costs at every opportunity.
 								</li>
 								<li>
-									<strong>Comprehensive Support</strong>: Whether you're an eCommerce retailer, a third-party logistics
-									provider, or an
-									exporter, we offer solutions tailored to your unique challenges.
+									<strong>Comprehensive Support</strong>:
+									Whether you're an eCommerce retailer, a third-party logistics provider, or an exporter, we offer solutions tailored to your unique challenges.
 								</li>
 							</ul>
 							<p>
-								At Trade Duty Refund, we make international returns simple, efficient, and cost-effective—so you can
-								focus
-								on growing your business.
+								At Trade Duty Refund, we make international returns simple, efficient, and cost-effective—so you can focus on growing your business.
 							</p>
 						</div>
+
+
 
 					</div>
 
