--- a/message-sent-success.html
+++ b/message-sent-success.html
@@ -301,8 +301,7 @@
 					<div class="col-lg-6 p-5 p-md-6">
 						<div class="mb-lg-6">
 							<h1 class="display-6 fw-semibold text-darkSamaritan">We have received it!</h1>
-							<h2 class="display-7 text-darkSamaritan">Our team will get back to you within
-								24 business hours</h2>
+							<h2 class="display-7 text-darkSamaritan">Our team will get back to you within 24 business hours</h2>
 							<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
 						</div>
 					</div>
