--- a/send-us-a-message.html
+++ b/send-us-a-message.html
@@ -294,41 +294,32 @@
   <div class="header-wrap-clone"></div>
 </header> <!-- end of header -->
 
-		<!-- Page Title
-		============================================= -->
+		<!-- Page Title -->
 		<section class="page-title bg-transparent border-0">
 			<div class="container">
 				<div class="page-title-row pt-5 pb-3">
-
 					<div class="page-title-content">
 						<span class="text-lightSamaritan fw-medium my-0">We are here to help</span>
 						<h1>
 							<div class="fw-bold display-5">Contact Us</div>
 						</h1>
-						<span class="fw-light" style="max-width: 40rem;">Need assistance? You’re in the right place! Drop us a
-							message, and our team will get back to you within 24 business hours. We’re here to
-							help with any questions
-							or concerns you have.</span>
+						<span class="fw-light" style="max-width: 40rem;">
+							Need assistance? You’re in the right place! Drop us a message, and our team will get back to you within 24 business hours. We’re here to help with any questions or concerns you have.
+						</span>
 					</div>
 				</div>
 			</div>
-		</section><!-- .page-title end -->
+		</section>
+		<!-- .page-title end -->
 
-
-		<!-- Contact Form & Map Overlay Section
-		============================================= -->
+		<!-- Contact Form & Map Overlay Section -->
 		<section id="content">
 			<div class="container">
-
 				<div class="row">
-					<!-- Contact Form Overlay
-					============================================= -->
+					<!-- Contact Form Overlay -->
 					<div class="contact-form-overlay col-md-8 offset-md-2 p-5">
-
-						<div class="">
-
-							<!-- Contact Form
-							============================================= -->
+						<div>
+							<!-- Contact Form -->
 							<form class="row mb-0" id="contactForm" action="https://api.staticforms.xyz/submit" method="post">
 								<fieldset>
 									<!-- required by staticForms.xyz -->
@@ -338,59 +329,54 @@
 									<!-- Customize Subject to help Google AppScript identify emails -->
 									<input type="hidden" name="subject" value="Website-Message-Received">
 
-									<div class="col-md-6 mx-md-auto form-group">
-										<label for="firstName">First Name <small>*</small></label>
+									<div class="col-md-6 form-group">
+										<label for="firstName">First Name</label>
 										<input type="text" id="firstName" name="$firstName" class="form-control" required>
 									</div>
 
-									<div class="col-md-6 mx-md-auto form-group">
-										<label for="name">Name <small>*</small></label>
+									<div class="col-md-6 form-group">
+										<label for="name">Name</label>
 										<input type="text" id="name" name="name" class="form-control" required>
 									</div>
 
 									<div class="col-md-6 form-group">
-										<label for="email">Email <small>*</small></label>
-										<input type="email" id="email" name="email"
-											pattern=pattern="(?![_.-])((?![_.-][_.-])[a-zA-Z\d_.-]){0,63}[a-zA-Z\d]@((?!-)((?!--)[a-zA-Z\d-]){0,63}[a-zA-Z\d]\.){1,2}([a-zA-Z]{2,14}\.)?[a-zA-Z]{2,14}"
-											class="form-control" required>
+										<label for="email">Email</label>
+										<input type="email" id="email" name="email" class="form-control" required>
 									</div>
 
 									<div class="w-100"></div>
 
 									<div class="col-12 form-group">
-										<label for="message">Message <small>*</small></label>
+										<label for="message">Message</label>
 										<textarea class="form-control" id="message" name="message" rows="6" cols="30" required></textarea>
 									</div>
 
 									<div class="col-12 form-group">
-										<input class="btn btn-light" type="submit" value="submit">
-										</input>
-										<!-- <button class="g-recaptcha" data-sitekey="6LfK0JYqAAAAACn4qq-1KudtU3Yx77odbPPA76z7"
-											data-callback='onSubmit' data-action='submit'>Submit</button> -->
+										<input class="btn btn-light" type="submit" value="Submit">
 									</div>
 								</fieldset>
 							</form>
 						</div>
-
-					</div><!-- Contact Form Overlay End -->
+					</div>
+					<!-- Contact Form Overlay End -->
 				</div>
-
 			</div>
 		</section>
+
 		<section id="content">
 			<div class="content-wrap">
 				<div class="container">
-
 					<div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-						<h2 class="mb-1 h2">Would you rather speak with an expert?</span></h2>
-						<h3 class="mb-4 fw-medium">TDR offers one-on-one sessions to quantify the value we bring to your business.
-						</h3>
-						<a href="make-an-appointment.html" class="button button-large button-rounded text-white">Book an
-							appointment</a>
+						<h2 class="mb-1 h2">Would you rather speak with an expert?</h2>
+						<h3 class="mb-4 fw-medium">TDR offers one-on-one sessions to quantify the value we bring to your business.</h3>
+						<a href="make-an-appointment.html" class="button button-large button-rounded text-white">
+							Book an appointment
+						</a>
 					</div>
 				</div>
 			</div>
 		</section>
+
 
 		<style>
   #footer {
