--- a/solutions-for-all-shippers.html
+++ b/solutions-for-all-shippers.html
@@ -290,26 +290,33 @@
     <section id="content">
       <div class="container text-center">
         <div class="alert samaritan d-inline-block" role="alert">
-          <p class="mb-0 lead">We have dedicated solutions for <a href="solutions-for-us-shippers.html"
-              class="button-circle"><strong>US</strong></a> <a href="solutions-for-eu-shippers.html"
-              class="button-circle"><strong>EU</strong></a> and <a href="solutions-for-uk-shippers.html"
-              class="button-circle"><strong>UK</strong></a> shippers. Check them out!</p>
+          <p class="mb-0 lead">
+            We have dedicated solutions for
+            <a href="solutions-for-us-shippers.html" class="button-circle">
+              <strong>US</strong>
+            </a>
+            <a href="solutions-for-eu-shippers.html" class="button-circle">
+              <strong>EU</strong>
+            </a>
+            <a href="solutions-for-uk-shippers.html" class="button-circle">
+              <strong>UK</strong>
+            </a>
+            shippers. Check them out!
+          </p>
         </div>
       </div>
 
       <div class="container">
         <div class="page-title-row pt-5 pb-3">
-
           <div class="page-title-content">
-            <span class="fw-medium my-0" style="color:var(--lightSamaritan)">TDR for eCom Shippers</span>
+            <span class="fw-medium my-0"
+              style="color:var(--lightSamaritan)">TDR for eCom Shippers</span>
             <h1>
               <div class="fw-bold display-5">End-to-End Duty Refund Solution for eCom Shippers</div>
             </h1>
-            <span class="fw-light" style="max-width: 40em;">Unlock hidden savings in your eCommerce supply chain with
-              our specialized duty and tax recovery services. By seamlessly reclaiming import duties on goods returned
-              by US or European
-              customers, we simplify global e-commerce duty reclaim to help you minimize costs and boost
-              profitability.</span>
+            <span class="fw-light" style="max-width: 40em;">
+              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. By seamlessly reclaiming import duties on goods returned by US or European customers, we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+            </span>
           </div>
         </div>
       </div>
@@ -339,10 +346,14 @@
               <div class="fbox-content">
                 <h3 class="text-transform-none mb-2">Order Returned</h3>
                 <p>The order was delivered to its US or European buyer. One or more items are returned.</p>
-                <p>Claim back US or Europe duties with our innovative <a class="text-decoration-underline"
-                    href="TDR-Duty-Drawback-in-the-US.html">TDR US Duty Drawback</a> and <a
-                    class="text-decoration-underline"
-                    href="TDR-Duty-Drawback-in-Europe.html">TDR Europe Duty Drawback</a> services.
+                <p>
+                  Claim back US or Europe duties with our innovative
+                  <a class="text-decoration-underline"
+                    href="TDR-Duty-Drawback-in-the-US.html">TDR US Duty Drawback</a>
+                  and
+                  <a class="text-decoration-underline"
+                    href="TDR-Duty-Drawback-in-Europe.html">TDR Europe Duty Drawback</a>
+                  services.
                 </p>
               </div>
             </div>
@@ -359,9 +370,9 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
+
       <div class="container">
         <h2>
           <div class="fw-bold display-6">Discover What's In It For eCom Shippers</div>
@@ -424,6 +435,7 @@
         </div>
       </div>
     </section>
+
     <section id="content">
   <div class="content-wrap">
     <div class="container">
