--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -292,23 +292,27 @@
     <section id="content">
       <div class="container">
         <div class="page-title-row pt-5 pb-3">
-
           <div class="page-title-content">
-            <span class="fw-medium my-0" style="color:var(--lightSamaritan)">TDR for EU Shippers</span>
+            <span class="fw-medium my-0" style="color:var(--lightSamaritan)">
+              TDR for EU Shippers
+            </span>
             <h1>
-              <div class="fw-bold display-5">End-to-End Duty Refund Solution for EU Shippers</div>
+              <div class="fw-bold display-5">
+                End-to-End Duty Refund Solution for EU Shippers
+              </div>
             </h1>
-            <span class="fw-light" style="max-width: 40em;">Unlock hidden savings in your eCommerce supply chain with
-              our specialized duty and tax recovery services. By reclaiming import duties on goods retuned by US or UK
-              customers and re-importing them in the EU at 0% duty rate, we simplify global e-commerce duty reclaim to
-              help you minimize costs and boost profitability.</span>
+            <span class="fw-light" style="max-width: 40em;">
+              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. By reclaiming import duties on goods returned by US or UK customers and re-importing them in the EU at 0% duty rate, we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+            </span>
           </div>
         </div>
       </div>
       <div class="content-wrap pb-1">
         <div class="container">
           <h2>
-            <div class="fw-bold display-6">A Solution For Each Customs Duty Spend</div>
+            <div class="fw-bold display-6">
+              A Solution For Each Customs Duty Spend
+            </div>
           </h2>
           <div class="row feature-box-border-vertical col-mb-50 justify-content-center align-items-center my-5">
             <div class="col-md-6 feature-box fbox-active fbox-dark fbox-sm">
@@ -316,7 +320,9 @@
                 <i class="fa-solid fa-check"></i>
               </div>
               <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order Shipped</h3>
+                <h3 class="text-transform-none mb-2">
+                  Order Shipped
+                </h3>
                 <p>The order has left the warehouse to its international buyer.</p>
               </div>
             </div>
@@ -328,11 +334,17 @@
                 <i class="fa-solid fa-check border"></i>
               </div>
               <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order Returned</h3>
+                <h3 class="text-transform-none mb-2">
+                  Order Returned
+                </h3>
                 <p>The order was delivered to its US buyer. One or more items are returned.</p>
-                <p>Claim back US duties with our innovative <a class="text-decoration-underline"
-                    href="TDR-Duty-Drawback-in-the-US.html">TDR US Duty Drawback</a>
-                  solution.</p>
+                <p>
+                  Claim back US duties with our innovative
+                  <a class="text-decoration-underline" href="TDR-Duty-Drawback-in-the-US.html">
+                    TDR US Duty Drawback
+                  </a>
+                  solution.
+                </p>
               </div>
             </div>
 
@@ -343,24 +355,28 @@
                 <i class="fa-solid fa-check border"></i>
               </div>
               <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order re-imported in the EU</h3>
+                <h3 class="text-transform-none mb-2">
+                  Order re-imported in the EU
+                </h3>
                 <p>The order is now back to the EU, ready to be processed at the returns warehouse.</p>
-                <p><a class="text-decoration-underline"
-                    href="TDR-Duty-Free-Returns-to-Europe.html">TDR Duty-Free Returns to Europe</a>
-                  will
-                  get your goods back home at 0% Duties.</p>
+                <p>
+                  <a class="text-decoration-underline" href="TDR-Duty-Free-Returns-to-Europe.html">
+                    TDR Duty-Free Returns to Europe
+                  </a>
+                  will get your goods back home at 0% Duties.
+                </p>
               </div>
             </div>
           </div>
-
         </div>
       </div>
       <div class="container">
         <h2>
-          <div class="fw-bold display-6">Discover What's In It For EU Shippers</div>
+          <div class="fw-bold display-6">
+            Discover What's In It For EU Shippers
+          </div>
         </h2>
       </div>
-
       <div class="d-flex align-items-center pb-4">
         <div class="container">
           <div class="row block-card-9 col-mb-50">
@@ -418,6 +434,7 @@
         </div>
       </div>
     </section>
+
     <section id="content">
   <div class="content-wrap">
     <div class="container">
