--- a/solutions-for-us-shippers.html
+++ b/solutions-for-us-shippers.html
@@ -293,77 +293,99 @@
     <section id="content">
       <div class="container">
         <div class="page-title-row pt-5 pb-3">
-
-          <div class="page-title-content">
-            <span class="fw-medium my-0" style="color:var(--lightSamaritan)">TDR for US Shippers</span>
-            <h1>
-              <div class="fw-bold display-5">End-to-End Duty Refund Solution for U.S. Shippers</div>
-            </h1>
-            <span class="fw-light" style="max-width: 40em;">Unlock hidden savings in your eCommerce supply chain with
-              our specialized duty and tax recovery services. From reclaiming duties on unused goods under the U.S. Duty
-              Drawback scheme to navigating EU duty refunds and ensuring duty-free returns to the U.S., we simplify
-              global e-commerce duty reclaim to help you minimize costs and boost profitability.</span>
-          </div>
+            <div class="page-title-content">
+                <span class="fw-medium my-0" style="color:var(--lightSamaritan)">
+                    TDR for US Shippers
+                </span>
+                <h1>
+                    <div class="fw-bold display-5">
+                        End-to-End Duty Refund Solution for U.S. Shippers
+                    </div>
+                </h1>
+                <span class="fw-light" style="max-width: 40em;">
+                    Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. From reclaiming duties on unused goods under the U.S. Duty Drawback scheme to navigating EU duty refunds and ensuring duty-free returns to the U.S., we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+                </span>
+            </div>
         </div>
-      </div>
-      <div class="content-wrap pb-1">
+    </div>
+    <div class="content-wrap pb-1">
         <div class="container">
-          <h2>
-            <div class="fw-bold display-6">A Solution For Each Customs Duty Spend</div>
-          </h2>
-          <div class="row feature-box-border-vertical col-mb-50 justify-content-center align-items-center my-5">
-            <div class="col-md-6 feature-box fbox-active fbox-dark fbox-sm">
-              <div class="fbox-icon">
-                <i class="fa-solid fa-check"></i>
-              </div>
-              <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order Shipped</h3>
-                <p>The order has left the warehouse to its international buyer.</p>
-                <p>Claim back US duties thanks to our integrated <a class="text-decoration-underline"
-                    href="TDR-Duty-Drawback-in-the-US.html">TDR US Duty Drawback</a>
-                  solution.</p>
-              </div>
+            <h2>
+                <div class="fw-bold display-6">
+                    A Solution For Each Customs Duty Spend
+                </div>
+            </h2>
+            <div class="row feature-box-border-vertical col-mb-50 justify-content-center align-items-center my-5">
+                <div class="col-md-6 feature-box fbox-active fbox-dark fbox-sm">
+                    <div class="fbox-icon">
+                        <i class="fa-solid fa-check"></i>
+                    </div>
+                    <div class="fbox-content">
+                        <h3 class="text-transform-none mb-2">
+                            Order Shipped
+                        </h3>
+                        <p>The order has left the warehouse to its international buyer.</p>
+                        <p>
+                            Claim back US duties thanks to our integrated
+                            <a class="text-decoration-underline" href="TDR-Duty-Drawback-in-the-US.html">
+                                TDR US Duty Drawback
+                            </a>
+                            solution.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="clear"></div>
+
+                <div class="col-md-6 feature-box fbox-active fbox-border fbox-light fbox-sm">
+                    <div class="fbox-icon">
+                        <i class="fa-solid fa-check border"></i>
+                    </div>
+                    <div class="fbox-content">
+                        <h3 class="text-transform-none mb-2">
+                            Order Returned
+                        </h3>
+                        <p>The order was delivered to its European buyer. One or more items are returned.</p>
+                        <p>
+                            Claim back European duties with our innovative
+                            <a class="text-decoration-underline" href="TDR-Duty-Drawback-in-Europe.html">
+                                TDR Europe Duty Drawback
+                            </a>
+                            solution.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="clear"></div>
+
+                <div class="col-md-6 feature-box fbox-active noborder fbox-light fbox-sm">
+                    <div class="fbox-icon">
+                        <i class="fa-solid fa-check border"></i>
+                    </div>
+                    <div class="fbox-content">
+                        <h3 class="text-transform-none mb-2">
+                            Order re-imported in the US
+                        </h3>
+                        <p>The order is now back to the US, ready to be processed at the returns warehouse.</p>
+                        <p>
+                            <a class="text-decoration-underline" href="TDR-Duty-Free-Returns-to-the-US.html">
+                                TDR Duty-Free Returns to the US
+                            </a>
+                            will get your goods back home at 0% Duties.
+                        </p>
+                    </div>
+                </div>
             </div>
-
-            <div class="clear"></div>
-
-            <div class="col-md-6 feature-box fbox-active fbox-border fbox-light fbox-sm">
-              <div class="fbox-icon">
-                <i class="fa-solid fa-check border"></i>
-              </div>
-              <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order Returned</h3>
-                <p>The order was delivered to its European buyer. One or more items are returned.</p>
-                <p>Claim back European duties with our innovative <a class="text-decoration-underline"
-                    href="TDR-Duty-Drawback-in-Europe.html">TDR Europe Duty Drawback</a>
-                  solution.</p>
-              </div>
-            </div>
-
-            <div class="clear"></div>
-
-            <div class="col-md-6 feature-box fbox-active noborder fbox-light fbox-sm">
-              <div class="fbox-icon">
-                <i class="fa-solid fa-check border"></i>
-              </div>
-              <div class="fbox-content">
-                <h3 class="text-transform-none mb-2">Order re-imported in the US</h3>
-                <p>The order is now back to the US, ready to be processed at the returns warehouse.</p>
-                <p><a class="text-decoration-underline"
-                    href="TDR-Duty-Free-Returns-to-the-US.html">TDR Duty-Free Returns to the US</a>
-                  will
-                  get your goods back home at 0% Duties.</p>
-              </div>
-            </div>
-          </div>
-
         </div>
-      </div>
-      <div class="container">
+    </div>
+    <div class="container">
         <h2>
-          <div class="fw-bold display-6">Discover What's In It For US Shippers</div>
+            <div class="fw-bold display-6">
+                Discover What's In It For US Shippers
+            </div>
         </h2>
-      </div>
+    </div>
+
 
       <div class="d-flex align-items-center pb-4">
         <div class="container">
